# My-Library

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
backend/: CMakeLists.txt  Makefile  test  test.cpp
backend/data/: database.json
backend/include/: Book.h  BookManager.h  BookRepository.h  ExternalApi.h  Logger.h  httplib.h
backend/src/: BookManager.cpp  BookRepository.h  CMakeLists.txt  ExternalApi.h  main.cpp
backend/src/api/: CMakeLists.txt
backend/src/api/handlers/: BookProcessor.cpp  BookProcessor.h  ExternalSearchProcessor.cpp  ExternalSearchProcessor.h  RecommendationProcessor.cpp  RecommendationProcessor.h
backend/src/api/middleware/: CorsMiddleware.h
backend/src/api/routes/: BookRoutes.cpp  BookRoutes.h  ExternalSearchRoutes.cpp  ExternalSearchRoutes.h  RecommendationRoutes.cpp  RecommendationRoutes.h
backend/src/domain/: Book.h  CMakeLists.txt  IBookRepository.h
backend/src/infrastructure/: CMakeLists.txt  ExternalApi.cpp  ExternalApi.h
backend/src/repository/: CMakeLists.txt  JsonBookRepository.cpp  JsonBookRepository.h
backend/src/service/: BookManager.cpp  BookManager.h  CMakeLists.txt
frontend/public/: index.html
frontend/public/css/: style.css
frontend/public/js/: app.js
